crates/fec-parser/tests/snapshots/itemizations__sc1_1906567_v8_4.snap
---
source: crates/fec-parser/tests/itemizations.rs
expression: "itemizations(\"SC1_1906567.fec\")"
snapshot_kind: text
---
[
  {
    "family": "SC1",
    "form_type": "SC1/10",
    "filer_committee_id": "C00652883",
    "transaction_id": "SC10-LN8-001",
    "back_reference_transaction_id": "SC10-LN8",
    "lender": {
      "entity_type": null,
      "organization_name": "Alterman Management Group Inc.",
      "name": {
        "first_name": "",
        "last_name": "",
        "middle_name": null,
        "prefix": null,
        "suffix": null
      },
      "address": {
        "street_1": "7805 N Loop 1604 E",
        "street_2": null,
        "city": "San Antonio",
        "state": "TX",
        "zip_code": "78233"
      }
    },
    "loan_amount": 7000.0,
    "loan_interest_rate_terms": "0.0000",
    "loan_incurred_date": "2025-04-24",
    "loan_due_date_terms": "20251231",
    "loan_restructured": false,
    "loan_incurred_date_original": "2025-04-24",
    "credit_amount_this_draw": 0.0,
    "total_balance": 7000.0,
    "others_liable": false,
    "collateral": false,
    "collateral_description": null,
    "collateral_value": 0.0,
    "perfected_interest": null,
    "future_income": false,
    "future_income_description": null,
    "future_income_estimated_value": 0.0,
    "depository_account_established_date": null,
    "depository_account_location": null,
    "depository_account_address": {
      "street_1": null,
      "street_2": null,
      "city": null,
      "state": null,
      "zip_code": null
    },
    "depository_account_authorization_date": null,
    "basis_of_loan_description": null,
    "treasurer": {
      "first_name": "Rod",
      "last_name": "Streets",
      "middle_name": null,
      "prefix": null,
      "suffix": null
    },
    "date_signed": "2025-04-24",
    "authorized_representative": {
      "first_name": "Rod",
      "last_name": "Streets",
      "middle_name": null,
      "prefix": null,
      "suffix": null
    },
    "authorized_representative_title": "Treasurer",
    "authorized_date": "2025-04-24",
    "image_number": null
  }
]
