crates/fec-parser/tests/snapshots/itemizations__sc2_756408_v8_0.snap
---
source: crates/fec-parser/tests/itemizations.rs
expression: "itemizations(\"SC2_756408.fec\")"
snapshot_kind: text
---
[
  {
    "family": "SC2",
    "form_type": "SC2/10",
    "filer_committee_id": "C00391029",
    "transaction_id": "SC/10-L7.G",
    "back_reference_transaction_id": "SC/10-L7",
    "guarantor": {
      "entity_type": null,
      "organization_name": null,
      "name": {
        "first_name": "Jim",
        "last_name": "Costa(Personal Funds)",
        "middle_name": null,
        "prefix": null,
        "suffix": null
      },
      "address": {
        "street_1": "C/O Scharton, Jones & Sherman C.P.",
        "street_2": "1318 East Shaw, Suite 410",
        "city": "Fresno",
        "state": "CA",
        "zip_code": "93710"
      }
    },
    "guarantor_committee_fec_id": null,
    "guarantor_employer": "U S Congress-Federal Governm",
    "guarantor_occupation": "United States Congressman",
    "guaranteed_amount": 25000.0,
    "image_number": null
  }
]
