crates/fec-parser/tests/snapshots/itemizations__sc_1884032_v8_4.snap
---
source: crates/fec-parser/tests/itemizations.rs
expression: "itemizations(\"SC_1884032.fec\")"
snapshot_kind: text
---
[
  {
    "family": "SC",
    "form_type": "SC/12",
    "filer_committee_id": "C00693697",
    "transaction_id": "SC/12.4135",
    "receipt_line_number": "19A",
    "lender": {
      "entity_type": "CAN",
      "organization_name": null,
      "name": {
        "first_name": "Raymond",
        "last_name": "Seney",
        "middle_name": "J",
        "prefix": null,
        "suffix": null
      },
      "address": {
        "street_1": "47 Gardner Hill Rd.",
        "street_2": null,
        "city": "East Nassau",
        "state": "NY",
        "zip_code": "12062"
      }
    },
    "election_code": "P2020",
    "election_other_description": null,
    "loan_amount_original": 1800.0,
    "loan_payment_to_date": 0.0,
    "loan_balance": 1800.0,
    "loan_incurred_date": "2019-03-26",
    "loan_due_date_terms": "None",
    "loan_interest_rate_terms": "0.0000",
    "secured": false,
    "personal_funds": true,
    "lender_committee_id": null,
    "lender_candidate": {
      "fec_id": "P00009225",
      "name": {
        "first_name": "Raymond",
        "last_name": "Seney",
        "middle_name": "J",
        "prefix": null,
        "suffix": null
      },
      "office": "P",
      "state": null,
      "district": null
    },
    "memo": false,
    "memo_text": null,
    "guarantors": [],
    "image_number": null
  }
]
