crates/fec-parser/tests/snapshots/itemizations__sc_1918637_v8_5.snap
---
source: crates/fec-parser/tests/itemizations.rs
expression: "itemizations(\"SC_1918637.fec\")"
snapshot_kind: text
---
[
  {
    "family": "SC",
    "form_type": "SC/10",
    "filer_committee_id": "C00469940",
    "transaction_id": "SC/10.4151",
    "receipt_line_number": "13A",
    "lender": {
      "entity_type": "CAN",
      "organization_name": null,
      "name": {
        "first_name": "Milton",
        "last_name": "Sumption",
        "middle_name": "J.",
        "prefix": null,
        "suffix": null
      },
      "address": {
        "street_1": "4031 Bunker Lane",
        "street_2": null,
        "city": "Wilmette",
        "state": "IL",
        "zip_code": "60091"
      }
    },
    "election_code": "P2010",
    "election_other_description": null,
    "loan_amount_original": 25000.0,
    "loan_payment_to_date": 4698.33,
    "loan_balance": 20301.67,
    "loan_incurred_date": "2009-11-05",
    "loan_due_date_terms": "On Demand",
    "loan_interest_rate_terms": "0.0000",
    "secured": false,
    "personal_funds": true,
    "lender_committee_id": null,
    "lender_candidate": {
      "fec_id": "H0IL10328",
      "name": {
        "first_name": "Milton",
        "last_name": "Sumption",
        "middle_name": "J.",
        "prefix": null,
        "suffix": null
      },
      "office": "H",
      "state": "IL",
      "district": "10"
    },
    "memo": false,
    "memo_text": null,
    "guarantors": [],
    "image_number": null
  }
]
